--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -3,6 +3,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
+  color: #222222;
   background-color: #fafafa;
 }
 
@@ -50,5 +51,14 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 20px;
+  }
+
+  &__foot {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    a {
+      display: block;
+    }
   }
 }
