--- a/client/components/Header/Header.module.scss
+++ b/client/components/Header/Header.module.scss
@@ -25,4 +25,26 @@
     display: flex;
     gap: 5px;
   }
+
+  .user {
+    position: relative;
+
+    .userMenu {
+      position: absolute;
+      background-color: rgb(255, 255, 255);
+      color: rgba(0, 0, 0, 0.87);
+      transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+      border-radius: 4px;
+      box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 5px -3px, rgba(0, 0, 0, 0.14) 0px 8px 10px 1px,
+        rgba(0, 0, 0, 0.12) 0px 3px 14px 2px;
+      padding: 5px 0;
+      right: -20px;
+      opacity: 0;
+      pointer-events: none;
+      &.active {
+        opacity: 1;
+        pointer-events: all;
+      }
+    }
+  }
 }
