Login and register [CLIENT]

--- a/client/components/Header/Header.module.scss
+++ b/client/components/Header/Header.module.scss
@@ -2,6 +2,7 @@
   position: static;
   background-color: #44484d;
   margin-bottom: 40px;
+  padding-right: 0 !important;
 
   .body {
     display: flex;
