--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -5,6 +5,8 @@ body {
   font-size: 1rem;
   line-height: 1.5;
   color: #222222;
+  padding-right: 0 !important;
+  overflow-y: scroll !important;
 }
 
 a {
