--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -26,3 +26,24 @@ ul,
 ol {
   list-style: none;
 }
+
+.tests {
+  display: flex;
+  gap: 40px;
+
+  .MuiPaper-root {
+    padding: 20px;
+    flex: 1 1 50%;
+  }
+
+  h5 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+}
