--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -7,6 +7,7 @@ body {
   color: #222222;
   padding-right: 0 !important;
   overflow-y: scroll !important;
+  padding-bottom: 60px;
 }
 
 a {
@@ -25,6 +26,12 @@ a {
 ul,
 ol {
   list-style: none;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .tests {
