--- a/client/components/AdminComplex/AdminComplex.module.scss
+++ b/client/components/AdminComplex/AdminComplex.module.scss
@@ -4,5 +4,10 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
+    gap: 20px;
+
+    h6 {
+      flex-grow: 1;
+    }
   }
 }
