--- a/client/components/AdminPanel/AdminHotel/AdminHotelDialog/AdminHotelDialog.module.scss
+++ b/client/components/AdminPanel/AdminHotel/AdminHotelDialog/AdminHotelDialog.module.scss
@@ -16,4 +16,50 @@
   .actions {
     padding: 15px 8px;
   }
+
+  .upload {
+    .uploadTitle {
+      margin-bottom: 10px;
+    }
+  }
+
+  .image {
+    width: 200px;
+    height: 130px;
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+      0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+
+    button {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 0;
+      opacity: 0;
+      transition: opacity 0.5s;
+      color: #ffffffd3;
+
+      svg {
+        width: 30px;
+        height: 30px;
+      }
+      input {
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        cursor: pointer;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+      &:hover {
+        opacity: 1;
+        background-color: rgba(0, 0, 0, 0.555);
+      }
+    }
+  }
 }
